--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,9 @@
     text-align: center;
     margin-bottom: 20px;
     
+    color: white;
+    
+    
 
   }
   
@@ -98,10 +101,28 @@
 }
 
 .regLink {
-  color: #007bff;
+  color: white;
   text-decoration: none;
+  border-radius: 5px; /* Rounded corners */
+  background-color: black;
+  padding: 5px 10px;
+
 }
 
 .regLink:hover {
   text-decoration: underline;
+  
 }
+
+.login1 {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.login span {
+  background-color: #007bff;; /* Blue background color */
+  color: white; /* White text color */
+  padding: 5px 10px; /* Added padding for better appearance */
+  border-radius: 5px; /* Rounded corners */
+}
+
